--- a/ZC_HW02.ipynb
+++ b/ZC_HW02.ipynb
@@ -1117,23 +1117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61962594-c63a-4942-85ce-4f44333b5e23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prepare_X_mean(df):\n",
-    "    df = df.copy()\n",
-    "    for i in features:\n",
-    "        df[i] = df[i].fillna(means[i])\n",
-    "    \n",
-    "\n",
-    "    X = df[features].values\n",
-    "    return X"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 201,
    "id": "702be80b-f066-42c0-87f9-ebfbbbb5008e",
    "metadata": {},
@@ -1158,8 +1141,197 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 209,
+   "id": "868029b4-4bd1-4c49-9d97-a88e18227c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_X_mean(df):\n",
+    "    df = df.copy()\n",
+    "    \n",
+    "    # 1. Select only the columns we need\n",
+    "    df_features = df[features]\n",
+    "    \n",
+    "    # 2. Calculate the mean and fill NaNs in one step.\n",
+    "    # Pandas automatically aligns the 'horsepower' mean to the 'horsepower' column.\n",
+    "    df_features = df_features.fillna(df_features.mean())\n",
+    "    \n",
+    "    # 3. Return the numpy array\n",
+    "    X = df_features.values\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "cbf7b141-e17e-427d-ab07-7368e4dec86a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_linear_regression(X,y):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones, X])\n",
+    "\n",
+    "    XTX = X.T.dot(X)\n",
+    "    XTX_inverse = np.linalg.inv(XTX)\n",
+    "    w_full = XTX_inverse.dot(X.T).dot(y)\n",
+    "\n",
+    "    return w_full[0], w_full[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "17e1d647-1b83-4d38-a100-faa177b8746f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmse(y,y_pred):\n",
+    "    se = (y-y_pred)**2\n",
+    "    mse = se.mean()\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    return rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "61615f09-9c22-4c56-a69e-fd2d59954c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.4636236995020941)"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = prepare_X_mean(df_train)\n",
+    "w0,w = train_linear_regression(X_train, y_train)\n",
+    "\n",
+    "X_pred = prepare_X_mean(df_val)\n",
+    "y_pred = w0 + X_pred.dot(w)\n",
+    "rmse(y_val,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "5c1e0b8c-684f-4df0-aa8c-6a9c5636c23b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_X_zero(df):\n",
+    "    df = df.copy()\n",
+    "    df = df.fillna(0)\n",
+    "    \n",
+    "\n",
+    "    X = df[features].values\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "010b50a1-620c-4ee9-8447-bcc0859bd26d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_linear_regression_reg(X,y,r):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones, X])\n",
+    "\n",
+    "    XTX = X.T.dot(X)\n",
+    "    XTX = XTX + r*np.eye(XTX.shape[0])\n",
+    "    \n",
+    "    XTX_inverse = np.linalg.inv(XTX)\n",
+    "    w_full = XTX_inverse.dot(X.T).dot(y)\n",
+    "\n",
+    "    return w_full[0], w_full[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "86059b6d-92fe-4b0f-87d5-2a4770c4e50d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5173782638844466)"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = prepare_X_zero(df_train)\n",
+    "w0,w = train_linear_regression(X_train, y_train)\n",
+    "\n",
+    "X_pred = prepare_X_zero(df_val)\n",
+    "y_pred = w0 + X_pred.dot(w)\n",
+    "rmse(y_val,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "940b062e-c146-4515-836f-feac663bd334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmse(y,y_pred):\n",
+    "    se = (y-y_pred)**2\n",
+    "    mse = se.mean()\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    return rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "cb8e900d-c319-4c3c-beb9-62be660e7577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 28.82736547365895 0.5173782638844466\n",
+      "1e-05 28.82285530197122 0.5173777673577595\n",
+      "0.0001 28.782327170764983 0.517373325130925\n",
+      "0.01 24.92683841981215 0.5171115525769823\n",
+      "0.1 11.239661084581073 0.5187525130702517\n",
+      "1 1.7315979411219746 0.5222348802093141\n",
+      "10 0.18306246621686947 0.5229812979636599\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in [0.0, 0.00001, 0.0001, 0.01, 0.1, 1, 10]:\n",
+    "    X_train = prepare_X_zero(df_train)\n",
+    "    w0, w = train_linear_regression_reg(X_train, y_train, r=r)\n",
+    "\n",
+    "    X_val = prepare_X_zero(df_val)\n",
+    "    y_pred = w0 + X_val.dot(w)\n",
+    "\n",
+    "    score = rmse(y_val, y_pred)\n",
+    "\n",
+    "    print(r, w0, score)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d1d72895-1986-47af-9975-e9a336ec5d0e",
+   "id": "ddd6114e-52f2-4021-a252-694b0905dda5",
    "metadata": {},
    "outputs": [],
    "source": []
